--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass": "^1.50.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.1.5",
     "@types/classnames": "^2.3.1",
     "@types/node": "17.0.23",
     "@types/react": "18.0.4",
