--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "next": "12.1.5",
     "next-auth": "^4.3.2",
